# MantaGuard

./: .gitignore  FirstScan.py  MANTAGUARD.py  MANTAGUARD_old.py  README.md  REFACTOR_NOTES.md  app.py  combined_scan_20250423_134837.csv  combined_scan_20250424_084608.csv  ini.py  init.sh  packet_capture.csv  pyproject.toml  requirements.txt  start.sh
ai-model/: analyze_capture.py  capture.pcap  extract_flow_by_uid.py  live_packet_buffer.py  pcap_metadata.py  realtime_detector.py  run_mantaguard.py  run_retrain_ocsvm.py  start.bat  timed_capture.py  visualize_results_README.md
ai-model/features/: feature_engineering.py
ai-model/forensics/: README.md
ai-model/parsers/: README.md  __init__.py  zeek_loader.py
ai-model/src/: check_dataset.py  data_loader.py  evaluation.py  incremental_knn.py  init_knn_model.py  main.py  model.py  test_knn.py  train_nslkdd.py
ai-model/test/: test_analyze_capture.py  test_fix.py  test_offline_pipeline.py  test_pipeline.py  test_realtime_detector.py  test_timed_capture.py  test_unknown_categories.py  test_zeek_loader.py
ai-model/training/: retrain_ocsvm.py  train_ocsvm.py  unknown_categories.json
content/: hero-banner.avif
data/analysis/: .gitkeep
data/logs/: .gitkeep
data/models/: .gitkeep
docs/: .gitkeep
mantaguard/: __init__.py
mantaguard/cli/: .gitkeep  __init__.py
mantaguard/core/: __init__.py
mantaguard/data/: __init__.py  unknown_categories.json
templates/: base.html  connection_browser.html  fix_patches.html  home.html  reports.html  scanning.html  training.html
tests/: __init__.py
(+107 files in other folders)
