[project]
name = "mantaguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "appdirs==1.4.4",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "flask>=3.1.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib>=1.1.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "lxml==5.3.1",
    "markupsafe==3.0.2",
    "matplotlib>=3.5.0",
    "narwhals==1.38.0",
    "netifaces==0.11.0",
    "numpy==2.2.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "protobuf==6.30.2",
    "pyarrow==20.0.0",
    "pydeck==0.9.1",
    "pyshark==0.6",
    "python-dateutil==2.9.0.post0",
    "python-nmap==0.7.1",
    "pytz==2025.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.45.0",
    "tenacity==9.1.2",
    "termcolor==2.5.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "watchdog==6.0.0",
]
